# parasol

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  AGENTS.md  AST_PLAN.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  FLUID_IF_EMPTY_CONCAT_BUG_REPORT.md  INVESTIGATION_SUMMARY.md  SESSION_SUMMARY.md  ai-analysis-spec.md  license.txt  makefile  makefile.inc  readme.md  test-concat.fluid  test.fluid  test_bytecode_analysis.fluid  test_bytecode_debug.fluid  test_bytecode_from_function.fluid  test_bytecode_func.fluid  test_bytecode_simple.fluid  test_debug.fluid  test_debug_bytecode.fluid  test_debug_nav.fluid  test_direct_print.fluid  test_double_safe_nav.fluid  test_func_arg.fluid  test_function_eval.fluid  test_if_empty_only.fluid  test_inspect.fluid  test_single_safe_nav.fluid  test_split_chain.fluid  test_with_object.fluid
core/link/: CMakeLists.txt  common-win.c  export.def  init-dll.c  init-unix.c  init-win.c  makefile  startup-common.c  startup.h
core/src/: CMakeLists.txt  core.fdl  errors.fdl  export.def  fields.fdl  makefile  registry.fdl  version
src/audio/: CMakeLists.txt  alsa.cpp  audio.cpp  audio.fdl  audio.h  audio_def.c  class_audio.cpp  class_sound.cpp  commands.cpp  device_enum.cpp  device_enum.h  dsound.c  dsound.cpp  functions.c  functions.cpp  kd.h  mixer_dispatch.cpp  mixer_dispatch.h  mixers.cpp  module_def.c  wait_drivers.cpp  windows.h
src/backstage/: CMakeLists.txt  backstage.cpp  backstage.fdl  backstage.tdl
src/core/: CMakeLists.txt  core.cpp  core_close.cpp  data.c  data.cpp  data_actionlist.c  data_actionlist.cpp  data_errors.c  data_errors.cpp  data_functions.c  defs.h  fs_folders.cpp  fs_identify.cpp  fs_resolution.cpp  fs_volumes.cpp  fs_watch_path.cpp  idl.h  inotify-syscalls.h  inotify.h  internal.cpp  lib_actions.cpp  lib_base64.cpp  lib_conversion.cpp  lib_events.cpp  lib_fields_read.cpp  lib_fields_write.cpp  lib_filesystem.cpp  lib_functions.cpp  lib_keystore.cpp  lib_locking.cpp  lib_log.cpp  lib_memory.cpp  lib_messages.cpp  lib_newobject.cpp  lib_objects.cpp  lib_semaphores.cpp  lib_strings.cpp  lib_unicode.cpp  prototypes.h  static_modules.cpp
src/display/: CMakeLists.txt  _display.cpp  ai-analysis.xml  class_bitmap.cpp  class_bitmap_def.c  class_clipboard.cpp  class_clipboard_def.c  class_controller.cpp  class_controller_def.c  class_display.cpp  class_display_def.c  class_pointer.cpp  class_pointer_def.c  defs.h  display-driver.cpp  display.cpp  display.fdl  display.h  display.tdl  fast_floodfill.cpp  idl.h  input_events.cpp  lib_bitmap.cpp  lib_cursor.cpp  lib_display.cpp  lib_input.cpp  lib_mempixels.cpp  lib_surfaces.cpp  module_def.c  prototypes.h
src/document/: CMakeLists.txt  debug.cpp  document.cpp  document.fdl  document.h  draw.cpp  dunit.cpp  entities.cpp  functions.cpp  hashes.fdl  hashes.h  layout.cpp  menu.cpp  module_def.c  parsing.cpp  scrollbar.cpp  streamchar.cpp  tags.cpp  ui.cpp
src/fluid/: CLAUDE.md  CMakeLists.txt  defs.h  fluid.cpp  fluid.fdl  fluid_array.cpp  fluid_class.cpp  fluid_class_methods.cpp  fluid_functions.cpp  fluid_input.cpp  fluid_io.cpp  fluid_module.cpp  fluid_number.cpp  fluid_object_actions.cpp  fluid_objects.cpp  fluid_objects_calls.cpp  fluid_objects_indexes.cpp  fluid_processing.cpp  fluid_regex.cpp  fluid_struct.cpp  fluid_thread.cpp  hashes.fdl  hashes.h  module_def.cpp  struct_def.h
src/font/: CMakeLists.txt  class_font.cpp  class_font_def.c  class_fontserver.cpp  font.cpp  font.fdl  font.tdl  font_bitmap.cpp  font_def.c  font_structs.h
src/http/: CMakeLists.txt  auth.c  auth.fluid  http.cpp  http.fdl  http.tdl  http_def.c  http_fields.cpp  http_functions.cpp  http_incoming.cpp  md5.c  test-http.fluid  test_http.fluid
src/launcher/: CMakeLists.txt  common.h  exec.cpp  fluid.cpp  origo.cpp  parasol.cpp  sandbox-win.cpp  tiri.cpp  version.h.in
src/link/: CMakeLists.txt  base64.cpp  base64.h  common-win.c  common-win.cpp  init-unix.cpp  init-win.cpp  kotuku.manifest.in  linear_rgb.cpp  linear_rgb.h  parasol.manifest  parasol.manifest.in  regex.cpp  regex.h  resource.rc  resource.rc.in  startup-common.c  startup.h  unicode.cpp  unicode.h
src/network/: AGENTS.md  CMakeLists.txt  class_netlookup.cpp  class_netlookup_def.c  class_proxy.cpp  class_proxy_def.c  module_def.c  network.cpp  network.fdl  network.tdl  openssl.cpp  ssl.cpp  win32_ssl.cpp
src/parc/: CMakeLists.txt  parc.cpp  parc.fdl  parc_def.c
src/picture/: CMakeLists.txt  picture.cpp  picture.fdl  picture.h  picture.tdl  picture_def.c
src/picture_jpeg/: CMakeLists.txt  jpeg.c  jpeg.cpp
src/regex/: CMakeLists.txt  regex.cpp  regex.fdl  regex_def.c
src/scintilla/: CMakeLists.txt  EXPORT_PDF.cxx  class_scintilla.cxx  class_scintilla_def.cxx  class_scintilla_ext.cxx  class_scintilla_search.cxx  module_def.c  pan_classes.cxx  pan_listbox.cxx  pan_menu.cxx  pan_surface.cxx  pan_window.cxx  scintilla.fdl  scintilla.tdl  scintillakotuku.h  scintillaparasol.h
src/surface/: CMakeLists.txt  module_def.c  surface.cpp  surface.fdl
src/svg/: CMakeLists.txt  anim.h  anim_metrics.cpp  anim_motion.cpp  anim_parsing.cpp  anim_timing.cpp  anim_transform.cpp  anim_value.cpp  animation.cpp  animation.h  animation_metrics.cpp  animation_motion.cpp  animation_parsing.cpp  animation_timing.cpp  animation_transform.cpp  animation_value.cpp  animation_values.cpp  class_rsvg.cpp  class_svg.cpp  class_svg_def.c  class_svgimage.cpp  class_svgimage_def.c  dunit.cpp  funit.cpp  gradients.cpp  parser.cpp  save_svg.cpp  svg.cpp  svg.fdl  svg.tdl  svg_def.c  utility.cpp
src/tiri/: .gitignore  CMakeLists.txt  defs.h  hashes.fdl  module_def.cpp  struct_def.h  tiri.cpp  tiri.fdl  tiri.tdl  tiri_async.cpp  tiri_class.cpp  tiri_class_methods.cpp  tiri_functions.cpp  tiri_input.cpp  tiri_io.cpp  tiri_module.cpp  tiri_number.cpp  tiri_objects_calls.cpp  tiri_objects_indexes.cpp  tiri_processing.cpp  tiri_regex.cpp  tiri_struct.cpp  tiri_thread.cpp
src/vector/: CMakeLists.txt  colourmaps.cpp  colours.cpp  font.h  idl.h  module_def.c  paths.cpp  pixfmt.h  utility.cpp  vector.cpp  vector.fdl  vector.h  vector.tdl  vector_functions.cpp  (+1 more)
(+3375 files in other folders)
